新增露营相关接口
